tests/dummy/bad/templates/secret-template.yaml.j2
one: "{{ get_secret('/one', 24) | b64encode }}"
two: 2
three: {{ 2 + 1 }}
four: {{ four }}